--- a/StreamIt.html
+++ b/StreamIt.html
@@ -7,6 +7,7 @@
     <title>StreamIt - Custom Video Player</title>
     <link rel="stylesheet" href="bad.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="//code.tidio.co/m9ufv0mhtzj190uiv71gdf1xvwfumqux.js" async></script>
 </head>
 <body>
     <header class="header">
